tests/rascal/negative/name_errors/L1/7_dupl-id.ob
MODULE Bla;

CONST
  x = 4;

VAR
  x: X;

BEGIN
  x := 1
END Bla.